fix broken css

--- a/assets/css/pages/blog.scss
+++ b/assets/css/pages/blog.scss
@@ -50,7 +50,7 @@ body {
 	.post-grid .item .layer-media img {
 		border-radius: 0;
 		border-top-left-radius: 5px;
-		border-top-right-radius: 5px
+		border-top-right-radius: 5px;
 		box-shadow: none;
 		object-fit: cover;
 		position: relative;
